2007-01-24  Ross Burton  <ross@openedhand.com>

	* matchbox-panel.pc.in:
	Add a variable for the applet library directory.

2007-01-23  Matthew Allum  <mallum@openedhand.com>

	* applets/showdesktop/showdesktop.c:
	Use a 'simpler' named icon and dont draw a frame around it.	

	* matchbox-panel/mb-panel.c: 
	Be a bit more informative when an applet cant be loaded.
	(via mickeyl)

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* matchbox-panel/mb-panel.c: 
	Add support for being parented in titlebar.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (sync_icon):

	Use "panel-window-menu" icon when there is no active app window.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (sync_icon),
	(rebuild_menu):

	Use default icon if no icon is specified.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (window_get_icon),
	(rebuild_menu), (button_press_event_cb), (filter_func),
	(screen_changed_cb):

	Show active task icon.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/showdesktop/showdesktop.c: (sync):

	Add nitems check.

	* applets/windowselector/windowselector.c: (get_utf8_property),
	(get_text_property), (window_get_icon),
	(window_menu_item_activate_cb), (rebuild_menu), (menu_hide_cb),
	(button_press_event_cb), (filter_func), (screen_changed_cb):

	Use window icons.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>

	* applets/battery/battery.c: (timeout):

	memset0 apm_info. Thanks valgrind.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>

	* applets/Makefile.am:
	* applets/windowselector/Makefile.am:
	* applets/windowselector/windowselector.c:
	* configure.ac:

	Added window selector applet. Still needs work to make icons
	show up.

	* applets/showdesktop/showdesktop.c: (show_desktop_applet_free),
	(sync), (filter_func), (screen_changed_cb):

	Perform initial sync.

2006-08-23  Jorn Baayen  <jorn@openedhand.com>
