@@ -1,11 +1,12 @@
 AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" -DGETTEXT_PACKAGE=\"matchbox-panel\"
 AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) $(SN_CFLAGS) \
 	    -I$(top_srcdir) -I$(top_builddir) -Werror
-	    
+
 appletdir = $(pkglibdir)
 applet_LTLIBRARIES = liblauncher.la
 
 liblauncher_la_SOURCES = launcher.c
 liblauncher_la_LIBADD = $(SN_LIBS)
+liblauncher_la_LDFLAGS = -avoid-version
 
 MAINTAINERCLEANFILES = Makefile.in
