@@ -1,7 +1,7 @@
 AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" -DGETTEXT_PACKAGE=\"matchbox-panel\"
 AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) $(LIBNOTIFY_CFLAGS) \
 	    -I$(top_srcdir) -I$(top_builddir)
-	    
+
 appletdir = $(pkglibdir)
 applet_LTLIBRARIES = libsystray.la
 
@@ -24,6 +24,7 @@ libsystray_la_SOURCES = $(BUILT_SOURCES) \
 			eggtraymanager.h \
 			systray.c
 libsystray_la_LIBADD = $(LIBNOTIFY_LIBS)
+libsystray_la_LDFLAGS = -avoid-version
 
 EXTRA_DIST = eggmarshalers.list
 
