@@ -5,6 +5,7 @@ AC_CONFIG_SRCDIR(matchbox-panel/mb-panel.c)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
+AM_DISABLE_STATIC
 AC_ISC_POSIX
 AC_PROG_CC
 AC_STDC_HEADERS
